Fix: Responsivness when at high resolution and Updated the menu modal
Items were too small

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -46,6 +46,10 @@ body{
 	width: 20%;
 }
 
+.social-link{
+	margin-top: 20px;
+}
+
 nav{
 	z-index: 777;
 	margin: 48px auto 0 auto;
@@ -75,6 +79,11 @@ nav{
 	border-radius: 15px;
 	text-decoration: none;
 	color: #f5f5f5;
+}
+
+.nav-link:hover{
+	background-color: #FDF4DC;
+	color: #533A71;
 }
 
 .hero{
@@ -160,8 +169,7 @@ nav{
 
 #services{
 	width: 100%;
-	height: 400px;
-	padding: 30px 0;
+	padding: 40px 0;
 	background-color: #A799B7;
 	text-align: center;
 }
@@ -193,30 +201,44 @@ nav{
 	display: none;
 	z-index: 9999;
 	position:fixed;
-	width: 75%;
-	height: 80%;
-	top:0;
+	height: 60vh;
+	width: 100%;
+	top:73px;
 	right:0;
 	background-color: #533A71;
-	justify-content: right;
 	text-align: right;
-	padding: 10px 20px 0 0;
+	padding-top: 10px ;
 	color: #FDF4DC;
 }
 
-#menu > a{
+#menu>div{
+	display: flex;
+	justify-content:center;
+	align-items: center;
+	padding: 20px 10px;
+	margin: 10px 10px;
+}
+
+#menu > div > a{
 	text-decoration: none;
 	color: #FDF4DC;
 }
 
 #menu > * {
-	padding-top: 20px;
-	border-bottom: 2px solid white;
+	height: 14%;
+	border-bottom: 1px solid rgba(255, 255, 255, 0.658);
 }
 
 #menu > *:last-child,
 #menu > *:first-child{
 	border: none;
+}
+
+#menu > *:first-child{
+	justify-content: flex-end;
+}
+#menu > *:last-child > *{
+	margin: 20px;
 }
 
 #close-menu{
@@ -227,7 +249,7 @@ nav{
 	display: none;
 	position: fixed;
 	z-index: 789;
-	top: 0%;
+	top: 73px;
 	left: 0%;
 	height:100%;
 	width: 100%;
@@ -235,9 +257,51 @@ nav{
 	cursor: pointer;
 }
 
+.menu-link{
+	text-decoration: underline;
+	padding: 15px 20px;
+	background-color: #968aa5;
+	border-radius: 15px;
+}
+
+.menu-link:hover{
+	background-color: #FDF4DC;
+	color: #533A71;
+}
+@media screen and (min-width: 1600px) {
+	nav{
+		width:45%;
+	}
+
+	.info{
+		justify-content: space-around;
+	}
+
+	#book-now{
+		height: 20vh;
+		width: 30vw;
+		align-items: center;
+		font-size: 1vw;
+	}
+
+	#book-now > a{
+		height: 20%;
+		padding: 5%;
+	}
+}
+
+
 @media screen and (min-width:900px) {
 	#ham-menu{
 		display: none;
+	}
+
+	#angel-photo{
+		height:275px;
+	}
+
+	.service-tabs > section{
+		height: 275px;
 	}
 }
 
@@ -246,11 +310,12 @@ nav{
 		display: none;
 	}
 	nav{
+		padding: 0 20px;
 		width: 100%;
 		border-radius: 0;
 		position: fixed;
 		border: none;
-		border-bottom: 8px solid #533A71;
+		border-bottom: 7px solid #533A71;
 		top:0;
 		margin: 0;
 		justify-content: space-between;
